--- a/store_locator.html
+++ b/store_locator.html
@@ -10,24 +10,31 @@
 </head>
 <body>
 
-  <!-- Header -->
+  <!-- Here, we have the Header section which contains the main navigation menu -->
   <header>
-    <nav class="navbar navbar-expand-lg custom-navbar px-4">
+  
+	<!-- Here, we have the Bootstrap navigation bar which enables responsiveness -->
+    <nav class="navbar navbar-expand-lg custom-navbar px-4" aria-label="Primary navigation">
+	
+	  <!-- Toggle button for menu to collapse on a mobile device -->
       <button class="navbar-toggler text-white border-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span> <!-- Icon used for the toggle button -->
       </button>
 
+	  <!-- Brand's logo and the link to the homepage -->
       <a class="navbar-brand text-white" href="index.html"><strong>☕ Brewtopia</strong></a>
 
+	  <!-- Collapsible menu -->
       <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
-        <ul class="navbar-nav gap-3">
-          <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="store_locator.html">Store Locator</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
+        <ul class="navbar-nav gap-3"> <!-- Navigation links used with spacing in between them -->
+          <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li> <!-- Link back to the homepage -->
+          <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li> <!-- Link back to the menu page -->
+          <li class="nav-item"><a class="nav-link text-white" href="store_locator.html">Store Locator</a></li> <!-- Link back to the store locator page -->
+          <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li> <!-- Link back to the contact page -->
         </ul>
       </div>
 
+	  <!-- Search icon to jump to store locator page -->
       <div class="text-white">
         <a href="store_locator.html">🔍</a>
       </div>
@@ -38,7 +45,9 @@
   <main>
     <!-- Store Finder Intro -->
     <section class="custom-store-finder my-4 text-center">
+	  <!-- Heading used for the store locator feature -->
       <h2 class="mb-4 fw-bold">Find a Coffee Shop Near You</h2>
+	  <!-- Input field with a search button for the user to use in order to enter the location or the store's name -->
       <div class="input-group justify-content-center mb-4 w-75 mx-auto">
         <input type="text" class="form-control custom-input" placeholder="Enter city, postcode, or store name">
         <button class="btn custom-btn" type="button">🔍</button>
@@ -51,7 +60,9 @@
 
         <!-- Map View -->
         <div class="col-md-9 order-1 order-md-2">
+		  <!-- Responsive container for the map with a 16:9 aspect ratio for the map -->
           <div class="ratio ratio-16x9">
+		    <!-- Placeholder used for a dynamic map (to be populated with the help of JavaScript) -->
             <div id="map"></div>
           </div>
         </div>
@@ -97,14 +108,17 @@
     </section>
   </main>
 
-  <!-- Footer -->
+  <!-- Footer section of the page -->
   <footer class="custom-footer text-center py-3">
+    <!-- Flex container used in order to align the footer links horizontally and add spacing in between them -->
     <div class="d-flex justify-content-center gap-4">
-      <a href="#" class="footer-link text-white">Careers</a>
-      <a href="#" class="footer-link text-white">About Us</a>
-      <a href="#" class="footer-link text-white">FAQs</a>
-      <a href="#" class="footer-link text-white">T&C</a>
+	  <!-- Here, we have the Footer navigation links (currently the placeholder being "#" links) -->
+      <a href="#" class="footer-link text-white">Careers</a> <!-- Link back to the careers page -->
+      <a href="#" class="footer-link text-white">About Us</a> <!-- Link back to the about us page -->
+      <a href="#" class="footer-link text-white">FAQs</a> <!-- Link back to the FAQs page -->
+      <a href="#" class="footer-link text-white">T&C</a> <!-- Link back to the terms and conditions page -->
     </div>
+	<!-- Here, we have the Copyright notice -->
     <p class="mb-1">© Copyright Brewtopia Design 2025</p>
   </footer>
 
