--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- HTML's head tag goes here with various meta tags, page's title and links to the CSS resources/files -->
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brewtopia - Home</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/styles.css" /> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css"> 
 </head>
+
+<!-- HTML's body tag goes here where main content of the page is contained and to be rendered by a browser -->
 <body>
 
-  <!-- Header -->
+  <!-- HTML5 semantic header tag to enhance SEO -->
   <header>
     <nav class="navbar navbar-expand-lg custom-navbar px-4" aria-label="Primary navigation">
       <!-- Toggle button for menu to collapse on a mobile device -->
@@ -19,10 +22,10 @@
 
       <a class="navbar-brand text-white" href="index.html"><strong>☕ Brewtopia</strong></a>
 
-      <!-- Collapsible menu -->
+      <!-- Collapsible menu so that on desktop it can be fully shown and on mobile devices it collases -->
       <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
         <ul class="navbar-nav gap-3">
-          <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="store_locator.html">Store Locator</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
@@ -36,15 +39,18 @@
     </nav>
   </header>
 
-  <!-- Main content goes here -->
-  <main class="container mt-5 text-center" role="main">
+  <!-- Main content of the page goes here, we use HTML5 semantic tag main to enhance SEO -->
+  <main class="container mt-5 text-center">
+	<!-- Again HTML5 semantic tag article is used to enhance SEO -->
     <article>
       <h1>Welcome to Brewtopia</h1>
       <h3>Your perfect coffee is just a click away ☕</h3>
     </article>
 
+	<!-- HTML5 semantic tag section is used to enhance SEO -->
     <section class="container my-5">
       <h2 class="text-center mb-4">Please navigate to one of the responsive pages:</h2>
+	  <!-- HTML's list is used here to show set of links to allow navigation to the three responsive pages -->
       <ul class="list-group list-group-flush text-center">
         <li class="list-group-item"><a href="store_locator.html">Store Locator Page</a></li>
         <li class="list-group-item"><a href="order_summary.html">Order Summary Page</a></li>
