--- a/store_locator.html
+++ b/store_locator.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- HTML's head tag goes here with various meta tags, page's title and links to the CSS resources/files -->
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brewtopia Store Locator</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Brewtopia - Store Locator Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
 </head>
+
+<!-- HTML's body tag goes here where main content of the page is contained and to be rendered by a browser -->
 <body>
 
   <!-- Here, we have the Header section which contains the main navigation menu -->
@@ -24,10 +27,10 @@
 	  <!-- Brand's logo and the link to the homepage -->
       <a class="navbar-brand text-white" href="index.html"><strong>☕ Brewtopia</strong></a>
 
-	  <!-- Collapsible menu -->
+	  <!-- Collapsible menu so that on desktop it can be fully shown and on mobile devices it collases -->
       <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
         <ul class="navbar-nav gap-3"> <!-- Navigation links used with spacing in between them -->
-          <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li> <!-- Link back to the homepage -->
+          <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li> <!-- Link back to the homepage -->
           <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li> <!-- Link back to the menu page -->
           <li class="nav-item"><a class="nav-link text-white" href="store_locator.html">Store Locator</a></li> <!-- Link back to the store locator page -->
           <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li> <!-- Link back to the contact page -->
@@ -67,10 +70,11 @@
           </div>
         </div>
 
-        <!-- Search Results List -->
+        <!-- Search Results List using Bootstrap's grid elements -->
         <aside class="col-md-3 order-2 order-md-1">
           <h5 class="fw-bold mb-3">Search Results:</h5>
 
+		<!-- Here the names of the coffeeshops and their addresses were generated with the help of ChatGPT GenAI tool -->
           <article class="mb-4">
             <strong>Espresso Vibes</strong><br>
             <small><strong>Addr:</strong> 20 Coffee Crescent, AL8 2HZ</small><br>
@@ -123,10 +127,10 @@
   </footer>
 
   <!-- Scripts -->
-  <!-- Bootstrap JS -->
+  <!-- Here we load the Bootstrap java script code -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   
-  <!-- Leaflet Open Source Map -->
+  <!-- Here we load the Leaflet Open Source Map java script code -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   
   <!-- Store Locator Script where we initialise the map and also add four markers onto it to simulate the search results -->
